k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: pinterest-k8s-BackendDeployment-c83d282e
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: pinterest-k8s-BackendDeployment-c83d282e
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: abyandimas/full-stack-pinterest-backend:22d19f68760ded4c094f37eded9553ed86b41101
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 3000
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  externalIPs: []
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: pinterest-k8s-BackendDeployment-c83d282e
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: pinterest-k8s-FrontendDeployment-c8ab96de
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: pinterest-k8s-FrontendDeployment-c8ab96de
    spec:
      automountServiceAccountToken: false
      containers:
        - image: abyandimas/full-stack-pinterest-frontend:22d19f68760ded4c094f37eded9553ed86b41101
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 80
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 80
  selector:
    cdk8s.io/metadata.addr: pinterest-k8s-FrontendDeployment-c8ab96de
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: pinterest-k8s-imgproxyservice-c869e549
spec:
  externalName: 52.200.119.20
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: pinterest-ingress
spec:
  rules:
    - host: imgproxy.abyandimas.me
      http:
        paths:
          - backend:
              service:
                name: pinterest-k8s-imgproxyservice-c869e549
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: api.abyandimas.me
      http:
        paths:
          - backend:
              service:
                name: backend-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
    - host: pinterest.abyandimas.me
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
